feat: adicionando funcionalidades - RemoverUsuario, EditarUsuario, BuscarPorNome

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar>
     <span>Gestão de usuários!</span>
+    <button mat-button routerLink="/usuario/novo">Novo</button>
 </mat-toolbar>
 <router-outlet></router-outlet>
