--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,3 +1,11 @@
+<form (ngSubmit)="buscaUsuarios()">
+  <mat-form-field appearance="fill">
+    <mat-label>Pesquisar usuário</mat-label>
+    <input matInput placeholder="Digite o usuário" [formControl]="busca" required />
+  </mat-form-field>
+  <button mat-button>Buscar</button>
+  </form>
+
 <table mat-table [dataSource]="usuarios" class="mat-elevation-z8">
   <!-- Coluna id -->
   <ng-container matColumnDef="Id">
@@ -16,6 +24,22 @@
     <th mat-header-cell *matHeaderCellDef>Ver</th>
     <td mat-cell *matCellDef="let usuario">
         <button mat-button routerLink="/usuario/{{ usuario.id }}">Detalhes</button>
+    </td>
+  </ng-container>
+
+  <!-- Coluna "remover usuário" -->
+  <ng-container matColumnDef="Remover">
+    <th mat-header-cell *matHeaderCellDef>Remover</th>
+    <td mat-cell *matCellDef="let usuario">
+        <button mat-button (click)="removerUsuario(usuario)">Remover</button>
+    </td>
+  </ng-container>
+
+  <!-- Coluna "editar usuário" -->
+  <ng-container matColumnDef="Editar">
+    <th mat-header-cell *matHeaderCellDef>Editar</th>
+    <td mat-cell *matCellDef="let usuario">
+        <button mat-button routerLink="/usuario/editar/{{ usuario.id }}">Editar</button>
     </td>
   </ng-container>
 
